--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -103,3 +103,8 @@
 .form-control[disabled] {
     background-color: white;
 }
+
+.termly-plans-select-curriculum-areas-header {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
