--- a/server/app/views/planning/termly/termlyPlansOverviewForGroup.scala.html
+++ b/server/app/views/planning/termly/termlyPlansOverviewForGroup.scala.html
@@ -1,8 +1,8 @@
 @import models.timetoteach.TimeToTeachUserId
 @import models.timetoteach.planning.SubjectTermlyPlan
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, subject: String, subjectTermlyPlan: SubjectTermlyPlan, esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], tttUserId: TimeToTeachUserId, classDetails: duplicate.model.ClassDetails, groupDetails: duplicate.model.Group, curriculumArea: String, subjectTermlyPlan: SubjectTermlyPlan, esAndOsCodeToDetailMap: Map[String, duplicate.model.esandos.EandO])
 
-@timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans - $subject - ${groupDetails.groupName.name.capitalize}",
+@timetoteachAppMain(handler, s"${classDetails.className.name} Termly Plans - $curriculumArea - ${groupDetails.groupName.name.capitalize}",
     userPictureUri, userFirstName, userFamilyName) {
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
@@ -67,7 +67,7 @@
                     <ul class="nav justify-content-end">
                         <li class="nav-item manage-class-nav-item-rightmost">
                             <a id="termly-plans-edit" role="button" class="btn btn-primary"
-                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForGroup(classDetails.id.id, subject, groupDetails.groupId.id)">
+                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForClassAtGroupLevel(classDetails.id.id, curriculumArea, groupDetails.groupId.id)">
                                 Re-Select Es&Os/Benchmarks</a>
                         </li>
                     </ul>
@@ -81,7 +81,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="inputSubject">Subject</label>
-                        <input type="text" class="form-control" id="inputSubject" placeholder="@subject" disabled="true">
+                        <input type="text" class="form-control" id="inputSubject" placeholder="@curriculumArea" disabled="true">
                     </div>
                     <div class="form-group col-md-4">
                         <label for="inputGroup">Group</label>
